--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,11 +1,19 @@
 .Contact{
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black !important;
+    font-size: medium !important;
 }
+.Contact div{width: 100%;}
 .Contact form{
     display: flex;
     flex-direction: column;
     width: 60%;
     margin: auto;
+    color: black !important;
+    font-size: medium !important;
 }
 .Contact form input{
     margin-bottom: 20px;
@@ -16,7 +24,8 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #495057;
+    color: black !important;
+    font-size: medium !important;
     background-color: #c2c2c2;
     background-clip: padding-box;
     border: 1px solid #ced4da;
@@ -27,10 +36,9 @@
     margin-bottom: 20px;
     margin: 1rem 0;
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
+    font-weight: 400;   
+    color: black;
+    font-size: large;
     background-color: #c2c2c2;
     background-clip: padding-box;
     border: 1px solid #ced4da;
