--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -1,5 +1,9 @@
 .Resume{
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ced4da;
 }
 .ResumeContainer{
     margin: 10px;
@@ -17,17 +21,12 @@
     height: 100%;
     width: 30%;
 }
-.Row1 ul li {
-    border: 1px solid #61892f;
-    background: #61892f;
-    margin-bottom: 10px;
-    padding: 15px;
-    color: #fff;
-}
+
 .Row1 ul li{
+    margin-bottom: 10px;
     padding: 10px;
     background-color: #61892f;
-    color: rgba(255, 255, 255, 0.986);
+    color: #ced4da;
     font-weight: 800;
     border: 1px solid #61892f;
     box-shadow: 15px 15px 1 1#adeb42;
@@ -35,4 +34,17 @@
 .Row1 ul li:hover{
     background-color: #adeb42;
     color: #222629;
+}
+.Row1 ul li:active{
+    background-color: #adeb42;
+    color: #222629;
+}
+@media (max-width:768px) {
+   
+    .Row1{
+        font-size: small;
+    }
+    .Row2{
+        font-size: small;
+    }
 }
