--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,24 @@
 
 html{
+
+}
+
+
+
+html {
+  overflow-y: scroll;
+  min-height: 100%;
+  -webkit-overflow-scrolling: touch;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   font-size: 62.5%;
   height: -webkit-fill-available;
   scroll-behavior: smooth;
   background: #222629;
 }
-
 body{
   min-height: 100%;
   min-height: -webkit-fill-available;
