--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,47 +1,46 @@
 .Contact{
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: black !important;
-    font-size: medium !important;
+    text-align: center;
 }
-.Contact div{width: 100%;}
+
 .Contact form{
     display: flex;
     flex-direction: column;
     width: 60%;
+    max-width: 500px;
     margin: auto;
-    color: black !important;
-    font-size: medium !important;
 }
 .Contact form input{
-    margin-bottom: 20px;
     margin: 1rem 0;
     display: block;
-    height: 3rem;
+    height: 4rem;
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
     color: black !important;
     font-size: medium !important;
     background-color: #c2c2c2;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    box-shadow: 0 3px 15px 0 #141414;
+    box-shadow: 10px 10px 1px 1px#1c1d1b;
+   
 }
 .Contact textarea{
-    margin-bottom: 20px;
-    margin: 1rem 0;
-    padding: 0.375rem 0.75rem;
-    font-weight: 400;   
+        margin: 1rem 0;
+        padding: 0.375rem 0.75rem;  
     color: black;
     font-size: large;
     background-color: #c2c2c2;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    box-shadow: 0 3px 15px 0 #141414;
+    box-shadow: 10px 10px 1px 1px#1c1d1b;
+}
+.Contact button{
+    box-shadow: 10px 10px 1px 1px#1c1d1b;
+    width: 200px;
+    margin: 20px auto;
 }
